# Chessgame

./: .env  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/game/: CMakeLists.txt
backend/game/src/: main.cpp
backend/game/src/api/controllers/: game_controller.hpp
backend/game/src/api/parsing/: parser.cpp  parser.hpp
backend/game/src/api/routes/: game_routes.cpp  game_routes.hpp  websocket_routes.cpp
backend/game/src/api/websocket/: game_session.cpp  game_session.hpp
backend/game/src/engine/: bot.cpp  engine_session.cpp  engine_session.hpp  engine_uci.cpp  engine_uci.hpp
backend/game/src/players/: bot.cpp  bot.hpp  uci_parser.hpp
backend/src/: board.hpp  game.hpp  main.cpp
backend/src/api/controllers/: GameController.cpp  GameController.hpp  game_controller.cpp  game_controller.hpp
backend/src/api/exceptions/: game_exception.hpp
backend/src/api/factories/: bb_move_factory.cpp  bb_move_factory.hpp  move_factory.cpp  move_factory.hpp
backend/src/api/mappers/: error_mapper.cpp  error_mapper.hpp  position_mapper.cpp  position_mapper.hpp
backend/src/api/models/: error.hpp  init.hpp  move.hpp  position.hpp  requests.hpp
backend/src/api/parsing/: DataValidator.cpp  DataValidator.hpp  MoveParser.cpp  MoveParser.hpp  data_validator.cpp  data_validator.hpp  parser.cpp  parser.hpp  response_parser.cpp  response_parser.hpp
backend/src/api/routes/: GameRoutes.cpp  GameRoutes.hpp  WebSocketRoutes.cpp  WebSocketRoutes.hpp  game_routes.cpp  game_routes.hpp  websocket_routes.cpp  websocket_routes.hpp
backend/src/api/validators/: json_validator.cpp  json_validator.hpp  move_factory.cpp  move_json_validator.cpp  move_json_validator.hpp  move_request_validator.cpp  move_request_validator.hpp  move_validator.cpp  move_validator.hpp  result.hpp  square_validator.cpp  square_validator.hpp
backend/src/api/websocket/: GameSession.cpp  GameSession.hpp  game_session.cpp  game_session.hpp
backend/src/engine/: engine_session.cpp  engine_session.hpp  engine_uci.cpp  engine_uci.hpp
backend/src/game/: Fen.cpp  Fen.hpp  Game.cpp  board.hpp  fen_tmp.cpp  game.hpp  game_constants.hpp  game_history.cpp  game_history.hpp  game_tmp.cpp  move_generator.hpp
backend/src/game/board/: Board.cpp  Board.hpp  Fen.cpp  Fen.hpp  board.cpp  board.hpp
backend/src/game/board/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
backend/src/game/board/pieces/utils/: GameState.hpp  Move.hpp
backend/src/game/components/: move.hpp  square.hpp
backend/src/game/move/: MoveGenerator.cpp  MoveGenerator.hpp  MoveValidator.cpp  MoveValidator.hpp
backend/src/game/pieces/: bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
backend/src/game/pieces/utils/: move.hpp  position.hpp
backend/src/game/rules/: move_generator.cpp  move_generator.hpp  move_validator.cpp  move_validator.hpp
backend/src/pieces/: bishop.hpp  king.hpp  knight.hpp  move.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
engine/: Dockerfile
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  chess.css  main.tsx
frontend/src/components/: ChessBoard.tsx  ErrorNotification.tsx  GameOverModal.css  GameOverModal.tsx  GithubButton.tsx  PromotionModal.tsx
frontend/src/pages/: GamePage.tsx  HomePage.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/styles/: style.css
frontend/src/types/: error.ts  game.ts  index.ts  init.ts  move.ts  position.ts  request.ts
frontend/src/websocket/: websocket.ts
nginx/: nginx.conf
src/: board.hpp  main.cpp
src/pieces/: bishop.hpp  color.hpp  constants.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  position.hpp  queen.hpp  rook.hpp  type.hpp
